--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,13 +18,16 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
-<li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>”</li>
+<li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The Year of McDonald’s</a>”</li>
+<li>“<a href="https://medium.com/@bennetthartz/location-appropriate-bike-racks-of-minneapolis-273bdc67046d">Location-appropriate bike racks of Minneapolis</a>” by <strong>Bennet Hartz</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=d8PndpFPL8g">Populism and media revolutions</a>” by <strong>Hank Green</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>” by <strong>Erin Kissane</strong></li>
 <li>“<a href="https://kjaymiller.com/blog/how-long-should-we-be-in-charge.html">How long should we be in charge?</a>” by <strong>Jay Miller</strong></li>
 <li>“<a href="https://medium.com/@dakara.liberty/boredom-sharpens-the-mind-752d4b44d05d">Boredom sharpens the mind</a>” by <strong>Dakara</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=1n9Gqa-0Cp0">Tim Walz plays Crazy Taxi with Alexandria Ocasio-Cortez</a>”</li>
-<li>“<a href="https://www.forrestwozniak.com">Sign Painter</a>” by <strong>Forrest Wozniak</strong></li>
-<li>“<a href="https://racketmn.com/its-time-for-twin-cities-mn-chefs-to-embrace-spam-hormel">It’s Time for Twin Cities Chefs to Embrace Spam</a>” by <strong>Em Cassel</strong></li>
+<li>“<a href="https://www.forrestwozniak.com">Sign painter</a>” by <strong>Forrest Wozniak</strong></li>
+<li>“<a href="https://racketmn.com/its-time-for-twin-cities-mn-chefs-to-embrace-spam-hormel">It’s time for Twin Cities chefs to embrace Spam</a>” by <strong>Em Cassel</strong></li>
 <li>“<a href="https://www.joanwestenberg.com/is-cultural-technical-debt-sabotaging-our-survival">Cultural tech debt</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://maggieappleton.com/garden">The Garden</a>” by <strong>Maggie Appleton</strong></li>
 <li>“<a href="https://restofworld.org/2024/electric-vehicle-conversions-uruguay">Turning gas cars electric in Latin America</a>” by <strong>Daniela Dib</strong></li>
@@ -53,10 +56,17 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
-<li>“<a href="https://www.youtube.com/watch?v=V1d8XWf8dDk">Custom villagers in Animal Crossing e+</a>” by <strong>Hunter R.</strong></li>
+<li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">The NES Expansion Port Is Finally Emerging From The Darkness. Why Now?</a>”</li>
+<li>“<a href="https://www.infochunk.com/schannel/index.html">Sega Channel game image file format</a>”</li>
+<li>“<a href="https://en.wikipedia.org/wiki/Microsoft_Entertainment_Pack:_The_Puzzle_Collection">Microsoft Entertainment Pack: The Puzzle Collection</a>”</li>
+<li>“<a href="https://spillhistorie.no/the-story-of-rogue">Rogue</a>” by <strong>Joachim Froholt</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=SORYL5J1Heg">Sonic Adventure DX is a bad port</a>” by <strong>Chaomix</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=pOni5zVp5uQ">Star Garden: Chao Garden and Kirby Air Ride</a>” by <strong>Chaomix</strong></li>
+<li>“<a href="https://www.goto10retro.com/p/faster-atari-st-digital-magazine">FaSTer Atari ST digital magazine</a>”</li>
+<li>“<a href="https://www.youtube.com/watch?v=V1d8XWf8dDk">Custom villagers in Dōbutsu no Mori e+</a>” by <strong>Hunter R.</strong></li>
 <li>“<a href="https://hunter-r.com/posts/dnm-ereader-doc">Villager E-Reader card format for Dōbutsu no Mori e+</a>” by <strong>Hunter R.</strong></li>
 <li>“<a href="https://cuyler36.github.io/2017/10/31/creating-a-custom-name-routine.html">Custom item name routine while translating Dōbutsu no Mori e+</a>” by <strong>Cuyler</strong></li>
-<li>“<a href="https://nookipedia.com/wiki/Secret_code/Generator">Nook Code Generator for Animal Crossing GC</a>” by <strong>Cuyler</strong></li>
+<li>“<a href="https://nookipedia.com/wiki/Secret_code/Generator">Nook Code generator for Animal Crossing GC</a>” by <strong>Cuyler</strong></li>
 <li>“<a href="https://www.reddit.com/r/Gamecube/comments/1gqfbae/my_niece_turned_18_and_i_gave_her_an_animal/?share_id=_XF34GcRZ_h-J5UqZDfZj&utm_content=1&utm_medium=ios_app&utm_name=iossmf&utm_source=share&utm_term=22&rdt=34253">Sharing items in Animal Crossing GC: "It's still online???"</a>”</li>
 <li>“<a href="https://www.kongabeat.com">Konga Beat: Track editor for Donkey Konga 2 and 3</a>” by <strong>Parham Gholami and Dexter Friedman</strong></li>
 <li>“<a href="https://geeceenet.com">GCNET</a>” by <strong>NeoStormer</strong></li>
@@ -123,6 +133,17 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://youtu.be/JE5u5mUT6gQ?t=1937">Keynote Speaker -  Sumana Harihareswara</a>”</li>
+<li>“<a href="https://funds.ecosyste.ms">Funds</a>”</li>
+<li>“<a href="https://spatialpixel.com">Spatial Pixel</a>”</li>
+<li>“<a href="https://blog.benjojo.co.uk/post/rfc-in-38-simple-steps">How to create an RFC</a>” by <strong>Ben Cox</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=wTv5kvuP1hI">The Timeless Way of Software</a>” by <strong>Taylor Troesh</strong></li>
+<li>“<a href="https://infrequently.org/2024/11/if-not-react-then-what">If not React, then what?</a>” by <strong>Alex Russell</strong></li>
+<li>“<a href="https://www.mnot.net/blog/2024/08/25/feeds">What RSS needs</a>” by <strong>Mark Nottingham</strong></li>
+<li>“<a href="https://www.mnot.net/blog/2024/11/29/platforms">Platform advantages: not just network effects</a>” by <strong>Mark Nottingham</strong></li>
+<li>“<a href="https://calpaterson.com/porter.html">Building LLMs is probably not a good business</a>” by <strong>Cal Paterson</strong></li>
+<li>“<a href="https://articles.foletta.org/post/2024-01-08-a-day-in-the-life-the-bgp-table">Global BGP table</a>” by <strong>Greg Foletta</strong></li>
+<li>“<a href="https://grayduck.mn/2024/11/21/handling-cookies-is-a-minefield">Handling cookies is a minefield</a>” by <strong>April King</strong></li>
 <li>“<a href="https://viewsource.info">View source web</a>” by <strong>Garry Ing</strong></li>
 <li>“<a href="https://www.abortretry.fail/p/the-internet-gopher-from-minnesota">The Internet Gopher from Minnesota</a>”</li>
 <li>“<a href="https://lagrangepoint.substack.com/p/airpods-hearing-aid-hacking">Bypassing AirPods regulatory locks with Faraday cages</a>” by <strong>Lagrange Point</strong></li>
@@ -174,6 +195,7 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://interactionmagic.com/UX-LEGO-Interfaces">LEGO interface panels</a>” by <strong>George Cave</strong></li>
 <li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
 <li>“<a href="https://www.decarpentier.nl/carpentopod">Walking wooden coffee table</a>” by <strong>Giliam de Carpentier</strong></li>
 <li>“<a href="https://owickstrom.github.io/the-monospace-web">The Monospace Web</a>” by <strong>Oskar Wickström</strong></li>
