Actually update links

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,7 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
-<li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The Year of McDonald’s</a>”</li>
+<li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The year of McDonald’s</a>” by <strong>Chris Arnade</strong></li>
 <li>“<a href="https://medium.com/@bennetthartz/location-appropriate-bike-racks-of-minneapolis-273bdc67046d">Location-appropriate bike racks of Minneapolis</a>” by <strong>Bennet Hartz</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=d8PndpFPL8g">Populism and media revolutions</a>” by <strong>Hank Green</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=0FwM8HdOY-A">Fix the fucking networks</a>” by <strong>Erin Kissane</strong></li>
@@ -56,7 +56,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
-<li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">The NES Expansion Port Is Finally Emerging From The Darkness. Why Now?</a>”</li>
+<li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">NES expansion port</a>” by <strong>Ernie Smith</strong></li>
 <li>“<a href="https://www.infochunk.com/schannel/index.html">Sega Channel game image file format</a>”</li>
 <li>“<a href="https://en.wikipedia.org/wiki/Microsoft_Entertainment_Pack:_The_Puzzle_Collection">Microsoft Entertainment Pack: The Puzzle Collection</a>”</li>
 <li>“<a href="https://spillhistorie.no/the-story-of-rogue">Rogue</a>” by <strong>Joachim Froholt</strong></li>
@@ -133,8 +133,8 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
-<li>“<a href="https://youtu.be/JE5u5mUT6gQ?t=1937">Keynote Speaker -  Sumana Harihareswara</a>”</li>
-<li>“<a href="https://funds.ecosyste.ms">Funds</a>”</li>
+<li>“<a href="https://youtu.be/JE5u5mUT6gQ?t=1937">What do we owe each other?</a>” by <strong>Sumana Harihareswara</strong></li>
+<li>“<a href="https://funds.ecosyste.ms">Supporting the software you use, not the software you see</a>”</li>
 <li>“<a href="https://spatialpixel.com">Spatial Pixel</a>”</li>
 <li>“<a href="https://blog.benjojo.co.uk/post/rfc-in-38-simple-steps">How to create an RFC</a>” by <strong>Ben Cox</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=wTv5kvuP1hI">The Timeless Way of Software</a>” by <strong>Taylor Troesh</strong></li>
