--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,9 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">38C3 - Resource Consumption of AI -  Degrow or Die</a>”</li>
+<li>“<a href="https://www.joanwestenberg.com/the-only-true-goal-is-boredom">Boredom</a>” by <strong>Joan Westenberg</strong></li>
+<li>“<a href="https://anildash.com/2025/01/04/DOGE-procurement-capture">DOGE is procurement capture</a>” by <strong>Anil Dash</strong></li>
 <li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The year of McDonald’s</a>” by <strong>Chris Arnade</strong></li>
 <li>“<a href="https://medium.com/@bennetthartz/location-appropriate-bike-racks-of-minneapolis-273bdc67046d">Location-appropriate bike racks of Minneapolis</a>” by <strong>Bennet Hartz</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=d8PndpFPL8g">Populism and media revolutions</a>” by <strong>Hank Green</strong></li>
@@ -56,6 +59,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://pictogb.com">Picture to Game Boy</a>” by <strong>Jesse Doherty</strong></li>
 <li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">NES expansion port</a>” by <strong>Ernie Smith</strong></li>
 <li>“<a href="https://www.infochunk.com/schannel/index.html">Sega Channel game image file format</a>”</li>
 <li>“<a href="https://en.wikipedia.org/wiki/Microsoft_Entertainment_Pack:_The_Puzzle_Collection">Microsoft Entertainment Pack: The Puzzle Collection</a>”</li>
@@ -133,6 +137,12 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://alexanderpetros.com/triptych">Triptych Proposals</a>” by <strong>Alexander Petros and Carson Gross</strong></li>
+<li>“<a href="https://lens.rknight.me">Lens</a>” by <strong>Robb Knight</strong></li>
+<li>“<a href="https://mjg59.dreamwidth.org/70954.html">GPUs, not TPMs, are the root of hardware DRM</a>” by <strong>Matthew Garrett</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=aQ3U82Ulro0">Pikmin 1²</a>” by <strong>PikHacker</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=inRB6ull5WQ">The life and death of HTMX</a>” by <strong>Alexander Petros</strong></li>
+<li>“<a href="https://www.niemanlab.org/2024/12/declaring-platform-independence">Declaring platform independence</a>” by <strong>Jason Koebler</strong></li>
 <li>“<a href="https://youtu.be/JE5u5mUT6gQ?t=1937">What do we owe each other?</a>” by <strong>Sumana Harihareswara</strong></li>
 <li>“<a href="https://funds.ecosyste.ms">Supporting the software you use, not the software you see</a>”</li>
 <li>“<a href="https://spatialpixel.com">Spatial Pixel</a>”</li>
@@ -195,6 +205,7 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://blog.gingerbeardman.com/2024/05/10/emoji-history-the-missing-years">Missing years of emoji history</a>” by <strong>Matt Stephton</strong></li>
 <li>“<a href="https://interactionmagic.com/UX-LEGO-Interfaces">LEGO interface panels</a>” by <strong>George Cave</strong></li>
 <li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
 <li>“<a href="https://www.decarpentier.nl/carpentopod">Walking wooden coffee table</a>” by <strong>Giliam de Carpentier</strong></li>
