header margin-bottom to 1.5em

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -233,7 +233,7 @@ blockquote {
   margin: 0;
   padding: 0;
   padding-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5em;
 }
 .header a {
   color: #ffffff;
