--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,7 +18,8 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
-<li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">38C3 - Resource Consumption of AI -  Degrow or Die</a>”</li>
+<li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">Degrow or die: resource consumption of LLMs</a>” by <strong>Thomas Fricke</strong></li>
 <li>“<a href="https://www.joanwestenberg.com/the-only-true-goal-is-boredom">Boredom</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://anildash.com/2025/01/04/DOGE-procurement-capture">DOGE is procurement capture</a>” by <strong>Anil Dash</strong></li>
 <li>“<a href="https://www.thefp.com/p/the-year-of-mcdonalds-trump-luigi-mangione">The year of McDonald’s</a>” by <strong>Chris Arnade</strong></li>
@@ -59,6 +60,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://youtu.be/RG8ljpIwsgc">F-Zero X can't be made today</a>” by <strong>Sepi</strong></li>
 <li>“<a href="https://pictogb.com">Picture to Game Boy</a>” by <strong>Jesse Doherty</strong></li>
 <li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">NES expansion port</a>” by <strong>Ernie Smith</strong></li>
 <li>“<a href="https://www.infochunk.com/schannel/index.html">Sega Channel game image file format</a>”</li>
@@ -119,6 +121,7 @@
 </ul>
 <h2>Security</h2>
 <ul>
+<li>“<a href="https://boehs.org/node/homomorphic-encryption">Homomorphic Encryption in iOS 18</a>” by <strong>Evan Boehs</strong></li>
 <li>“<a href="https://blog.yossarian.net/2024/11/18/Security-means-securing-people-where-they-are">Security means securing people where they are</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://neilmadden.blog/2024/09/18/digital-signatures-and-how-to-avoid-them">Digital signatures and how to avoid them</a>” by <strong>Neil Madden</strong></li>
 <li>“<a href="https://rya.nc/vpp-hack.html">Hacking a Virtual Power Plant</a>” by <strong>Ryan Castellucci</strong></li>
@@ -137,6 +140,7 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://drew.shoes/posts/sup">sup</a>” by <strong>Drew Schuster</strong></li>
 <li>“<a href="https://alexanderpetros.com/triptych">Triptych Proposals</a>” by <strong>Alexander Petros and Carson Gross</strong></li>
 <li>“<a href="https://lens.rknight.me">Lens</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://mjg59.dreamwidth.org/70954.html">GPUs, not TPMs, are the root of hardware DRM</a>” by <strong>Matthew Garrett</strong></li>
@@ -205,6 +209,8 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://youtu.be/SlS3FOmKUbE">Sub-Pixel Art</a>” by <strong>Japhy Riddle</strong></li>
+<li>“<a href="https://xkcd.com/3036">Chess Zoo</a>” by <strong>Randall Munroe</strong></li>
 <li>“<a href="https://blog.gingerbeardman.com/2024/05/10/emoji-history-the-missing-years">Missing years of emoji history</a>” by <strong>Matt Stephton</strong></li>
 <li>“<a href="https://interactionmagic.com/UX-LEGO-Interfaces">LEGO interface panels</a>” by <strong>George Cave</strong></li>
 <li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
