--- a/app/static/style.css
+++ b/app/static/style.css
@@ -40,25 +40,19 @@ body {
   margin: 0;
   padding: 0;
   font-weight: 400;
-  font-size: 1.2rem;
-  line-height: 1.54;
+  font-size: 1.3em;
+  line-height: 1.6;
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
-  padding-bottom: 4rem;
-
-  @media (min-width:600px) {
-    font-size: 1.3rem;
-  }
+  padding-bottom: 4em;
 }
 
 a {
   color: #0000ff;
   text-decoration: underline;
   text-decoration-line: underline;
+  text-decoration-thickness: 2px;
   text-underline-offset: 4px;
 }
 a > code {
@@ -103,49 +97,28 @@ thead {
 
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0em;
-  line-height: 1.3;
-}
-h2:not(:first-child) {
- margin-top: 40px;
-}
-h3:not(:first-child) {
- margin-top: 40px;
-}
-h4:not(:first-child) {
- margin-top: 40px;
-}
-h5:not(:first-child) {
- margin-top: 40px;
-}
-h6:not(:first-child) {
- margin-top: 40px;
 }
 h1 {
   font-size: 2rem;
   font-weight: bold;
   margin: 0;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
-h2, h3 {
+h2, h3, h4, h5, h6 {
   font-size: 1.5rem;
-  font-weight: bold;
-}
-h4, h5, h6 {
-  font-size: 1.4rem;
-}
-h2 {
+  margin: 0;
+  margin-bottom: 1.5rem;
   border-bottom: solid;
   border-width: 2px;
-}
-h3 {
-  border-bottom: solid;
-  border-width: 1px;
 }
 h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anchor {
   display: inline-flex;
   visibility: visible;
   opacity: 1;
+}
+p {
+  margin: 0 0 1.5em 0;
 }
 blockquote > :first-child {
   margin-top: 0;
@@ -157,13 +130,13 @@ input[type=submit], input[type=email] {
   font-weight: 400;
   border-radius: 0;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   border-color: #000;
   margin: 0;
-  padding: 0.25rem;
+  padding: 0.25em;
 }
 input[type=submit] {
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
   color: #fff;
   background-color: #000;
 }
@@ -171,16 +144,15 @@ input[type=email] {
   background-color: #fff;
 }
 button {
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
   color: #fff;
   background-color: #000;
- font-weight: 400;
+  font-weight: 400;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   border-color: #000;
   margin: 0;
-  padding: 0.25rem;
-}
+  padding: 0.25em;
 }
 #bd-email {
   max-width: 60%;
@@ -200,10 +172,11 @@ pre {
   white-space: nowrap;
 }
 .codehilite, :not(.codehilite) > pre {
-  font-family: Menlo, 'Fira Mono', monospace;
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.3rem;
   background-color: #f0f0f0;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   padding: 1em;
   overflow-x: scroll;
   margin: 0;
@@ -212,7 +185,7 @@ pre {
 blockquote {
   background-color: #f0f0f0;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   margin: 0;
   margin-bottom: 1.5em;
   padding: 1em;
@@ -232,7 +205,7 @@ blockquote {
   color: #ffffff;
   margin: 0;
   padding: 0;
-  padding-top: 1rem;
+  padding-top: 1em;
   margin-bottom: 1.5em;
 }
 .header a {
@@ -321,7 +294,7 @@ blockquote {
   float: left;
   margin: 0;
   margin-right: 4%;
-  min-height: 0.125rem;
+  min-height: 0.125em;
 }
 .col-1,
 .col-2,
