--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
 <li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">Degrow or die: resource consumption of LLMs</a>” by <strong>Thomas Fricke</strong></li>
 <li>“<a href="https://www.joanwestenberg.com/the-only-true-goal-is-boredom">Boredom</a>” by <strong>Joan Westenberg</strong></li>
@@ -60,6 +61,8 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://lmnt.me/blog/the-most-mario-colors.html">The most Mario colors</a>” by <strong>Louie Mantia</strong></li>
+<li>“<a href="https://www.jofamo.com/blog/secrets-of-the-pocket-camera">Secrets of the Pocket Camera</a>” by <strong>Jonathan Traynor</strong></li>
 <li>“<a href="https://youtu.be/RG8ljpIwsgc">F-Zero X can't be made today</a>” by <strong>Sepi</strong></li>
 <li>“<a href="https://pictogb.com">Picture to Game Boy</a>” by <strong>Jesse Doherty</strong></li>
 <li>“<a href="https://tedium.co/2024/12/02/nintendo-expansion-port-history">NES expansion port</a>” by <strong>Ernie Smith</strong></li>
@@ -79,8 +82,8 @@
 <li>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by <strong>Sora</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by <strong>Macho Nacho</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by <strong>Fabien Sanglard</strong></li>
-<li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
+<li>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by <strong>AsumSaus</strong></li>
 <li>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger</strong></li>
 <li>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by <strong>Gered King</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by <strong>Good Vibes Gaming</strong></li>
@@ -140,6 +143,12 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://arty.name/localstorage.html">Web localStorage limits</a>”</li>
+<li>“<a href="http://hallofdreams.org/posts/physicsforums">PhysicsForums and the Dead Internet Theory</a>” by <strong>David and Felipe</strong></li>
+<li>“<a href="https://jon.work/og">File systems: the original hypermedia</a>” by <strong>Jon Secchis</strong></li>
+<li>“<a href="http://simplecpudesign.com">Simple CPU design</a>”</li>
+<li>“<a href="https://retro.social/@ifixcoinops/113838462085835742">Sending data between two phones</a>”</li>
+<li>“<a href="https://www.vintagecomputing.com/index.php/archives/3292/the-pc-is-dead-its-time-to-make-computing-personal-again">Personal computing is dead</a>” by <strong>Benj Edwards</strong></li>
 <li>“<a href="https://drew.shoes/posts/sup">sup</a>” by <strong>Drew Schuster</strong></li>
 <li>“<a href="https://alexanderpetros.com/triptych">Triptych Proposals</a>” by <strong>Alexander Petros and Carson Gross</strong></li>
 <li>“<a href="https://lens.rknight.me">Lens</a>” by <strong>Robb Knight</strong></li>
@@ -209,6 +218,9 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://dan-ball.jp/en/javagame/dust">Powder Game</a>” by <strong>Dan-Ball</strong></li>
+<li>“<a href="https://openheart.fyi">Open Heart Protocol</a>”</li>
+<li>“<a href="https://letterformarchive.org/news/this-just-in-chopstick-sleeves-as-emissaries-of-japanese-typography-and-culture">Typography of Japanese chopstick sleeves</a>”</li>
 <li>“<a href="https://youtu.be/SlS3FOmKUbE">Sub-Pixel Art</a>” by <strong>Japhy Riddle</strong></li>
 <li>“<a href="https://xkcd.com/3036">Chess Zoo</a>” by <strong>Randall Munroe</strong></li>
 <li>“<a href="https://blog.gingerbeardman.com/2024/05/10/emoji-history-the-missing-years">Missing years of emoji history</a>” by <strong>Matt Stephton</strong></li>
