--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -18,7 +18,7 @@
 {% block header %}
 <h1>{{ blog_title }}</h1>
 <p><nobr>Published {{ blog_published_date }}</nobr> <nobr>by Seth Larson</nobr><br>
-{% if blog_is_favorite %}<span title="This means this article is one of my favorites, nice choice!">★</span> {% endif %}{% if reading_time > 0 %} Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }}{% endif %} <a href="https://webmention.io/api/mentions.html?target=https://sethmlarson.dev/{{ blog_slug }}"><span id="webmentions"></span></a></p>
+{% if blog_is_favorite %}<span title="This means this article is one of my favorites, nice choice!">★</span> {% endif %}{% if reading_time > 0 %} Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a href="https://webmention.io/api/mentions.html?target=https://sethmlarson.dev/{{ blog_slug }}"><span id="webmentions"></span></a>{% endif %}</p>
 {% endblock %}
 {% block content %}
 {{ blog_content | safe }}
