--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://xkcd.com/743">Caring about infrastructure</a>” by <strong>Randall Munroe</strong></li>
 <li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
 <li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=4ouNbLgJEHA">Degrow or die: resource consumption of LLMs</a>” by <strong>Thomas Fricke</strong></li>
@@ -143,6 +144,9 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://robinrendle.com/notes/the-computer-is-a-feeling">The computer is a feeling</a>” by <strong>Robin Rendle</strong></li>
+<li>“<a href="https://www.localfirst.fm/s1">Apps vs Files</a>” by <strong>Gordon Brander, Peter van Hardenberg, and Jess Martin</strong></li>
+<li>“<a href="https://willowprotocol.org">Willow Protocol</a>” by <strong>Aljoscha Meyer and Sam Gwilym</strong></li>
 <li>“<a href="https://arty.name/localstorage.html">Web localStorage limits</a>”</li>
 <li>“<a href="http://hallofdreams.org/posts/physicsforums">PhysicsForums and the Dead Internet Theory</a>” by <strong>David and Felipe</strong></li>
 <li>“<a href="https://jon.work/og">File systems: the original hypermedia</a>” by <strong>Jon Secchis</strong></li>
@@ -218,6 +222,8 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://alexwlchan.net/2025/lego-inventory-spreadsheets">Inventory spreadsheets for Lego sets</a>” by <strong>Alex Chan</strong></li>
+<li>“<a href="https://vietnamesetypography.com">Vietnamese Typography</a>” by <strong>Donny Trương</strong></li>
 <li>“<a href="https://dan-ball.jp/en/javagame/dust">Powder Game</a>” by <strong>Dan-Ball</strong></li>
 <li>“<a href="https://openheart.fyi">Open Heart Protocol</a>”</li>
 <li>“<a href="https://letterformarchive.org/news/this-just-in-chopstick-sleeves-as-emissaries-of-japanese-typography-and-culture">Typography of Japanese chopstick sleeves</a>”</li>
