New article: Software for connection (2: Consensus)

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,7 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.joanwestenberg.com/when-screens-remove-our-better-angels">Screens remove social friction and higher-order thinking</a>” by <strong>Joan Westenberg</strong></li>
 <li>“<a href="https://xkcd.com/743">Caring about infrastructure</a>” by <strong>Randall Munroe</strong></li>
 <li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
 <li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
