--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,7 +18,11 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://rknight.me/blog/quiet">Quiet</a>” by <strong>Robb Knight</strong></li>
+<li>“<a href="https://bobbiec.github.io/white-elephant.html">White Elephant is surprisingly effective</a>” by <strong>Bobbie and Yee Aun</strong></li>
+<li>“<a href="https://blog.cloudflare.com/offline-celebrations-how-christmas-nye-and-lunar-new-year-festivities-shape-online-behavior">Offline celebrations affect internet traffic</a>”</li>
 <li>“<a href="https://www.joanwestenberg.com/when-screens-remove-our-better-angels">Screens remove social friction and higher-order thinking</a>” by <strong>Joan Westenberg</strong></li>
+<li>“<a href="https://andysblog.uk/why-blog-if-nobody-reads-it">Why blog if no one reads it?</a>” by <strong>Andy Hawthorne</strong></li>
 <li>“<a href="https://xkcd.com/743">Caring about infrastructure</a>” by <strong>Randall Munroe</strong></li>
 <li>“<a href="https://pudding.cool/2023/09/invisible-epidemic">Loneliness epidemic</a>” by <strong>Alvin Chang</strong></li>
 <li>“<a href="https://www.wheresyoured.at/never-forgive-them">Never Forgive Them</a>” by <strong>Ed Zitron</strong></li>
@@ -63,6 +67,8 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://eli.lipsitz.net/posts/internet-connected-pinball">Connecting a 1980s pinball machine to the internet</a>” by <strong>Eli Lipsitz</strong></li>
+<li>“<a href="https://jamchamb.net/2018/07/11/animal-crossing-nes-emulator-hacks.html">Exploiting Animal Crossing's NES emulator</a>” by <strong>James Chambers</strong></li>
 <li>“<a href="https://lmnt.me/blog/the-most-mario-colors.html">The most Mario colors</a>” by <strong>Louie Mantia</strong></li>
 <li>“<a href="https://www.jofamo.com/blog/secrets-of-the-pocket-camera">Secrets of the Pocket Camera</a>” by <strong>Jonathan Traynor</strong></li>
 <li>“<a href="https://youtu.be/RG8ljpIwsgc">F-Zero X can't be made today</a>” by <strong>Sepi</strong></li>
@@ -145,6 +151,9 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://chadnauseam.com/coding/random/calculator-app">Not anyone can make a calculator app</a>” by <strong>Chad Nauseam</strong></li>
+<li>“<a href="https://thib.me/django-in-government">Django in governments</a>” by <strong>Thibaud</strong></li>
+<li>“<a href="https://audmcname.com/comics/rss-is-not-dead-yet">RSS is not dead yet</a>” by <strong>Audra McNamee</strong></li>
 <li>“<a href="https://robinrendle.com/notes/the-computer-is-a-feeling">The computer is a feeling</a>” by <strong>Robin Rendle</strong></li>
 <li>“<a href="https://www.localfirst.fm/s1">Apps vs Files</a>” by <strong>Gordon Brander, Peter van Hardenberg, and Jess Martin</strong></li>
 <li>“<a href="https://willowprotocol.org">Willow Protocol</a>” by <strong>Aljoscha Meyer and Sam Gwilym</strong></li>
