Your GitHub Copilot access has been renewed 🤡

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,12 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://dansinker.com/posts/2025-02-23-dale">What felt impossible became possible</a>” by <strong>Dan Sinker</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=QEJpZjg8GuA">Algorithms are breaking how we think</a>” by <strong>Alec Watson</strong></li>
+<li>“<a href="https://craigmod.com/ridgeline/203">Garbage</a>” by <strong>Craig Mod</strong></li>
+<li>“<a href="https://www.doc.cc/articles/beautiful-boring-and-without-soul">Beautiful, boring, and without soul</a>” by <strong>Steyn Viljoen</strong></li>
+<li>“<a href="https://alexgaynor.net/2025/feb/19/tech-workers-monopoly-and-monopsony">Tech workers and monopolies</a>” by <strong>Alex Gaynor</strong></li>
+<li>“<a href="https://www.wheresyoured.at/longcon">Generative AI con</a>” by <strong>Edward Zitron</strong></li>
 <li>“<a href="https://rknight.me/blog/quiet">Quiet</a>” by <strong>Robb Knight</strong></li>
 <li>“<a href="https://bobbiec.github.io/white-elephant.html">White Elephant is surprisingly effective</a>” by <strong>Bobbie and Yee Aun</strong></li>
 <li>“<a href="https://blog.cloudflare.com/offline-celebrations-how-christmas-nye-and-lunar-new-year-festivities-shape-online-behavior">Offline celebrations affect internet traffic</a>”</li>
@@ -67,6 +73,7 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://picandocodigo.net/2025/nintendo-america-latina-90s-pirateria-famicom">Piratería y Famicom: Nintendo en América Latina en la década de los 90</a>” by <strong>Fernando Briano</strong></li>
 <li>“<a href="https://eli.lipsitz.net/posts/internet-connected-pinball">Connecting a 1980s pinball machine to the internet</a>” by <strong>Eli Lipsitz</strong></li>
 <li>“<a href="https://jamchamb.net/2018/07/11/animal-crossing-nes-emulator-hacks.html">Exploiting Animal Crossing's NES emulator</a>” by <strong>James Chambers</strong></li>
 <li>“<a href="https://lmnt.me/blog/the-most-mario-colors.html">The most Mario colors</a>” by <strong>Louie Mantia</strong></li>
@@ -151,6 +158,10 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://www.hytradboi.com/2025/943c54af-ea5f-4d3e-b3e3-7767b5a1bfc5-good-thing-were-not-writing-a-database">Good thing we're not writing a database</a>” by <strong>Peter van Hardenberg</strong></li>
+<li>“<a href="https://tech.chrishardie.com/2025/rss-feed-of-your-website">How far I'll go to make an RSS feed of your website</a>” by <strong>Chris Hardie</strong></li>
+<li>“<a href="https://sarasoueidan.com/blog/css-shapes">Creating non-rectangular layouts with CSS shapes</a>” by <strong>Sara Soueidan</strong></li>
+<li>“<a href="https://shkspr.mobi/blog/2025/02/why-are-qr-codes-with-capital-letters-smaller-than-qr-codes-with-lower-case-letters">YELL IN YOUR QR CODES</a>” by <strong>Terence Eden</strong></li>
 <li>“<a href="https://chadnauseam.com/coding/random/calculator-app">Not anyone can make a calculator app</a>” by <strong>Chad Nauseam</strong></li>
 <li>“<a href="https://thib.me/django-in-government">Django in governments</a>” by <strong>Thibaud</strong></li>
 <li>“<a href="https://audmcname.com/comics/rss-is-not-dead-yet">RSS is not dead yet</a>” by <strong>Audra McNamee</strong></li>
@@ -218,7 +229,6 @@
 <li>“<a href="https://imperavi.com/books/ui-typography">User Interface Typography</a>”</li>
 <li>“<a href="https://jjtech.dev/reverse-engineering/imessage-explained">iMessage protocol</a>” by <strong>JJTech</strong></li>
 <li>“<a href="https://how-did-i-get-here.net">How Did I Get Here?</a>”</li>
-<li>“<a href="https://hypermedia.systems">Hypermedia Systems</a>” by <strong>Carson Gross, Adam Stepinski, and Deniz Akşimşek</strong></li>
 <li>“<a href="https://rachelbythebay.com/w/2023/11/07/wpa3">Asahi Linux folks are doing us a solid with WPA3 fixes</a>”</li>
 <li>“<a href="https://lwn.net/Articles/947941">Hyphens, minus, and dashes in Debian man pages</a>” by <strong>Jonathan Corbet</strong></li>
 <li>“<a href="https://alexgaynor.net/2020/nov/30/why-software-ends-up-complex">Why software ends up complex</a>” by <strong>Alex Gaynor</strong></li>
@@ -232,6 +242,10 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://localthunk.com/blog/solitaire">Solitaire</a>” by <strong>Localthunk</strong></li>
+<li>“<a href="https://www.tedwiggin.com/MIMT.html">Ghost House</a>” by <strong>Ted Wiggin</strong></li>
+<li>“<a href="https://vietgd.com">Vietnamese Graphic Design</a>”</li>
+<li>“<a href="https://medium.com/@solidi/the-tomy-screwball-scramble-9f4eab3681da">Screwball Scramble</a>” by <strong>Doug Arcuri</strong></li>
 <li>“<a href="https://alexwlchan.net/2025/lego-inventory-spreadsheets">Inventory spreadsheets for Lego sets</a>” by <strong>Alex Chan</strong></li>
 <li>“<a href="https://vietnamesetypography.com">Vietnamese Typography</a>” by <strong>Donny Trương</strong></li>
 <li>“<a href="https://dan-ball.jp/en/javagame/dust">Powder Game</a>” by <strong>Dan-Ball</strong></li>
