--- a/app/static/style.css
+++ b/app/static/style.css
@@ -65,7 +65,7 @@ a:hover {
 
 table {
   border-collapse: collapse;
-  border: 1px solid;
+  border: 2px solid;
   display: block;
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -76,10 +76,16 @@ table {
   margin-bottom: 1.5em;
 }
 table td, table th {
-    border: 1px dotted #000000;
+    border: 2px dotted #000000;
+}
+table tr:first-child td, table thead:first-child th {
+  border-top: 0px;
+}
+table tr:last-child td {
+  border-bottom: 0px;
 }
 table td:first-child, table th:first-child {
-    border-left: 0px solid #000000;
+    border-left: 0px;
 }
 table td:last-child, table th:last-child {
     border-right: 0px solid #000000;
