Post Malone Oreos

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -26,7 +26,7 @@
     <p>
         <strong>Have thoughts or questions?</strong> Send them my way:
     </p>
-    <p>
+    <p style="overflow: clip;">
         <a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank"><code>sethmlarson.99</code></a> (Signal)<br>
         <a href="mailto:sethmichaellarson@gmail.com" target="_blank"><code>sethmichaellarson@gmail.com</code></a><br>
         <a href="https://fosstodon.org/@sethmlarson" target="_blank"><code>@sethmlarson@fosstodon.org</code></a>
